--- a/chimera.html
+++ b/chimera.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
   <!--来看我源码了？--->
   <!--源码都给你看了，还好意思不打赏点？--->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -58,7 +58,7 @@
   <!--来看我源码了？--->
   <!--源码都给你看了，还好意思不打赏点？--->
 <body>
-    <form class="am-form" action="itms-services://?action=download-manifest&url=https://pwndrer4.xyz/plist/Chimera-" onsubmit="sub();" method="get">
+    <form class="am-form" action="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/Chimera-" onsubmit="sub();" method="get">
 
         <fieldset>
             <h3>Chimera软件下载：</h3>
@@ -97,7 +97,7 @@
 
     $('#doc-select-1').change(function () {
 
-        url = "itms-services://?action=download-manifest&url=https://pwndrer4.xyz/plist/Chimera-" + $(this).val();
+        url = "itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/Chimera-" + $(this).val();
 
 
     });
@@ -106,7 +106,7 @@
     }
     $('#sub').click(function () {
         console.log(url);
-        if (url == "itms-services://?action=download-manifest&url=https://pwndrer4.xyz/plist/Chimera-" || url == undefined || url == '' || url == null) {
+        if (url == "itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/Chimera-" || url == undefined || url == '' || url == null) {
             alert('请选择软件，再确认安装');
             return;
         }
