--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                <div class="item-inner">
                                 <div class="item-title">Alan官方APP</div>
                                  <div class="item-after">
-          <a href="https://pwndrer4.xyz/Alan源.mobileconfig" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+          <a href="https://pwndrer4.gitee.io/jb/Alan源.mobileconfig" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
                                      </div>
                                          </div>
                                            </div>
@@ -320,7 +320,7 @@
 
 													<li>
 														<div class="item-content">
-															<div class="item-media"><img class="app-icon" src="https://pwndrer4.xyz/image/%E4%B9%90%E7%BD%91.png" />
+															<div class="item-media"><img class="app-icon" src="https://pwndrer4.gitee.io/jb/image/%E4%B9%90%E7%BD%91.png" />
 															</div>
 															<div class="item-inner">
 																<div class="item-title-row">
@@ -358,7 +358,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">10.x网页激活越狱</div>
 																	<div class="item-after">
-																		<a href="https://pwndrer4.xyz/10" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="https://pwndrer4.gitee.io/jb/10" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS10.X全系列越狱.</div>
@@ -373,7 +373,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">9.x网页激活越狱</div>
 																	<div class="item-after">
-																		<a href="https://pwndrer4.xyz/9" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="https://pwndrer4.gitee.io/jb/9" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS9.0-9.3.3全系列越狱.</div>
@@ -545,7 +545,7 @@
 																										<li>
 															<div class="item-content">
 																<div class="item-media"><img class="app-icon"
-																		src="https://pwndrer4.xyz/image/ipa.png" />
+																		src="https://pwndrer4.gitee.io/jb/image/ipa.png" />
 																</div>
 																<div class="item-inner">
 																	<div class="item-title-row">
@@ -563,7 +563,7 @@
 																											<li>
 															<div class="item-content">
 																<div class="item-media"><img class="app-icon"
-																		src="https://pwndrer4.xyz/image/ipa.png" />
+																		src="https://pwndrer4.gitee.io/jb/image/ipa.png" />
 																</div>
 																<div class="item-inner">
 																	<div class="item-title-row">
@@ -581,7 +581,7 @@
 												<li>
 															<div class="item-content">
 																<div class="item-media"><img class="app-icon"
-																		src="https://pwndrer4.xyz/image/ipa.png" />
+																		src="https://pwndrer4.gitee.io/jb/image/ipa.png" />
 																</div>
 																<div class="item-inner">
 																	<div class="item-title-row">
@@ -599,7 +599,7 @@
 												<li>
 															<div class="item-content">
 																<div class="item-media"><img class="app-icon"
-																		src="https://pwndrer4.xyz/image/ipa.png" />
+																		src="https://pwndrer4.gitee.io/jb/image/ipa.png" />
 																</div>
 																<div class="item-inner">
 																	<div class="item-title-row">
@@ -935,7 +935,7 @@
 													<li>
 															<div class="item-content">
 																<div class="item-media"><img class="app-icon"
-																		src="https://pwndrer4.xyz/image/ipa.png" />
+																		src="https://pwndrer4.gitee.io/jb/image/ipa.png" />
 																</div>
 																<div class="item-inner">
 																	<div class="item-title-row">
@@ -953,7 +953,7 @@
 																											<li>
 															<div class="item-content">
 																<div class="item-media"><img class="app-icon"
-																		src="https://pwndrer4.xyz/image/ipa.png" />
+																		src="https://pwndrer4.gitee.io/jb/image/ipa.png" />
 																</div>
 																<div class="item-inner">
 																	<div class="item-title-row">
@@ -971,7 +971,7 @@
 												<li>
 															<div class="item-content">
 																<div class="item-media"><img class="app-icon"
-																		src="https://pwndrer4.xyz/image/ipa.png" />
+																		src="https://pwndrer4.gitee.io/jb/image/ipa.png" />
 																</div>
 																<div class="item-inner">
 																	<div class="item-title-row">
@@ -989,7 +989,7 @@
 												<li>
 															<div class="item-content">
 																<div class="item-media"><img class="app-icon"
-																		src="https://pwndrer4.xyz/image/ipa.png" />
+																		src="https://pwndrer4.gitee.io/jb/image/ipa.png" />
 																</div>
 																<div class="item-inner">
 																	<div class="item-title-row">
@@ -1042,7 +1042,7 @@
 
 													<li>
 														<div class="item-content">
-															<div class="item-media"><img class="app-icon" src="https://pwndrer4.xyz/image/%E4%B9%90%E7%BD%91.png" />
+															<div class="item-media"><img class="app-icon" src="https://pwndrer4.gitee.io/jb/image/%E4%B9%90%E7%BD%91.png" />
 															</div>
 															<div class="item-inner">
 																<div class="item-title-row">
@@ -1080,7 +1080,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">10.x网页激活越狱</div>
 																	<div class="item-after">
-																		<a href="https://pwndrer4.xyz/10" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="https://pwndrer4.gitee.io/jb/10" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS10.X全系列越狱.</div>
@@ -1095,7 +1095,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">9.x网页激活越狱</div>
 																	<div class="item-after">
-																		<a href="https://pwndrer4.xyz/9" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="https://pwndrer4.gitee.io/jb/9" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS9.0-9.3.3全系列越狱.</div>
