--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">10.x网页激活越狱</div>
 																	<div class="item-after">
-																		<a href="https://pwndrer4.gitee.io/jb/10" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="https://pwndrer4.gitee.io/jb/10.mobileconfig" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS10.X全系列越狱.</div>
