--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿
+
 
 <!DOCTYPE HTML>
 <!--操-->
@@ -358,7 +358,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">10.x网页激活越狱</div>
 																	<div class="item-after">
-																		<a href="https://pwndrer4.gitee.io/jb/10.mobileconfig" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="https://pwndrer4.gitee.io/jb/10" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS10.X全系列越狱.</div>
@@ -373,7 +373,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">9.x网页激活越狱</div>
 																	<div class="item-after">
-																		<a href="https://pwndrer4.gitee.io/jb/9.mobileconfig" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="https://pwndrer4.gitee.io/jb/9" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS9.0-9.3.3全系列越狱.</div>
