--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">Electra</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/11.0-11.41.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/11.0-11.41.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS11-11.4.1设备越狱工具</div>
@@ -238,7 +238,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">Meridian</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/10x.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/10x.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS10.X全系列设备越狱</div>
@@ -255,7 +255,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">yalu102</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/10.2.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/10.2.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS10.1-10.2设备越狱</div>
@@ -272,7 +272,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">Hi3lix·32位</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/32.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/32.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS10.X全系列越狱</div>
@@ -292,7 +292,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">Filza</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/Filza.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/Filza.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS12.4/A12设备.</div>
@@ -309,7 +309,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">Th0r雷神</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/Th0r.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/Th0r.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS11.0-11.4.1设备越狱</div>
@@ -326,7 +326,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">乐网</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/lewang.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/lewang.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">解决cydia或者sileo无法联网问题</div>
@@ -343,7 +343,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">doubleH3lix</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/10.33.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/10.33.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS10.X全系列越狱.</div>
@@ -396,7 +396,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">yulu102</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/10.2.plist" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/10.2.plist" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS10.1-10.2设备越狱</div>
@@ -427,7 +427,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">Filza</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/Filza.plist" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/Filza.plist" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS12.4/A12设备.</div>
@@ -442,7 +442,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">Th0r雷神</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/Th0r.plist" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/Th0r.plist" class="button button-fill button-round" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">GET</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS11.0-11.4.1设备越狱</div>
@@ -662,7 +662,7 @@
 															<div class="item-title-row">
 																<div class="item-title">QQ</div>
 																<div class="item-after">
-																	<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/qqzqb_resigned.plist"
+																	<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/qqzqb_resigned.plist"
 																		class="button button-fill color-blue external"
 																		style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																</div>
@@ -852,7 +852,7 @@
 															<div class="item-title-row">
 																<div class="item-title">QQ</div>
 																<div class="item-after">
-																	<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/qqzqb_resigned.plist"
+																	<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/qqzqb_resigned.plist"
 																		class="button button-fill color-blue external"
 																		style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																</div>
@@ -872,7 +872,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">Electra</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/11.0-11.41.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/11.0-11.41.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS11-11.4.1设备越狱工具</div>
@@ -889,7 +889,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">Meridian</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/10x.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/10x.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS10.X全系列设备越狱</div>
@@ -906,7 +906,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">yulu102</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/10.2.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/10.2.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS10.1-10.2设备越狱</div>
@@ -923,7 +923,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">Hi3lix·32位</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/32.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/32.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS10.X全系列越狱</div>
@@ -1014,7 +1014,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">Filza</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/Filza.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/Filza.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS12.4/A12设备.</div>
@@ -1031,7 +1031,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">Th0r雷神</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/Th0r.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/Th0r.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS11.0-11.4.1设备越狱</div>
@@ -1048,7 +1048,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">乐网</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/lewang.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/lewang.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">解决cydia或者sileo无法联网问题</div>
@@ -1065,7 +1065,7 @@
 																<div class="item-title-row">
 																	<div class="item-title">doubleH3lix</div>
 																	<div class="item-after">
-																		<a href="itms-services://?action=download-manifest&url=https://plist.pwndrer4.xyz/jb/10.33.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
+																		<a href="itms-services://?action=download-manifest&url=https://pwndrer4.gitee.io/jb/plist/10.33.plist" class="button button-fill color-blue external" style="background: #F0F1F6; color: #007AFF; font-weight:bold;">安装</a>
 																	</div>
 																</div>
 																<div class="item-subtitle">支持IOS10.X全系列越狱.</div>
