--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿
+
 
 <!DOCTYPE HTML>
 <!--操-->
@@ -23,11 +23,11 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<!--调用开始·Pwndrer4二开·QQ：2648616832-->
 	<title>Alan源</title>
-	<link rel="stylesheet" href="https://app.ambier.cn/themes/simpleboot3/public/assets/css/framework7.ios.min.css">
-	<link rel="stylesheet" href="https://app.ambier.cn/themes/simpleboot3/public/assets/css/framework7.ios.colors.min.css">
-	<link rel="stylesheet" href="https://app.ambier.cn/themes/simpleboot3/public/assets/css/appvalley.css">
+	<link rel="stylesheet" href="https://cdn.staticfile.org/framework7/5.7.8/css/framework7.min.css">
+	<link rel="stylesheet" href="https://app.ambier.cn/IOS-JSandCSS/framework7.ios.colors.min.css">
+	<link rel="stylesheet" href="https://app.ambier.cn/IOS-JSandCSS/appvalley.css">
 	<link rel="stylesheet" href="http://at.alicdn.com/t/font_720367_duszgq18uni.css">
-	<script type="text/javascript" src="https://app.ambier.cn/themes/simpleboot3/public/assets/js/framework7.min.js"></script>
+	<script type="text/javascript" src="https://cdn.staticfile.org/framework7/5.3.2/js/framework7.min.js"></script>
 	<!--调用结束·Pwndrer4二开·QQ：2648616832-->
 	<!--首页顶部开始·Pwndrer4二开·QQ：2648616832-->
 	
