--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<!--调用开始·Pwndrer4二开·QQ：2648616832-->
 	<title>Alan源</title>
-	<link rel="stylesheet" href="https://cdn.staticfile.org/framework7/5.7.8/css/framework7.min.css">
-	<link rel="stylesheet" href="https://app.ambier.cn/IOS-JSandCSS/framework7.ios.colors.min.css">
-	<link rel="stylesheet" href="https://app.ambier.cn/IOS-JSandCSS/appvalley.css">
+	<link rel="stylesheet" href="framework7.min.css">
+	<link rel="stylesheet" href="framework7.ios.colors.min.css">
+	<link rel="stylesheet" href="appvalley.css">
 	<link rel="stylesheet" href="http://at.alicdn.com/t/font_720367_duszgq18uni.css">
-	<script type="text/javascript" src="https://cdn.staticfile.org/framework7/5.3.2/js/framework7.min.js"></script>
+	<script type="text/javascript" src="framework7.min.js"></script>
 	<!--调用结束·Pwndrer4二开·QQ：2648616832-->
 	<!--首页顶部开始·Pwndrer4二开·QQ：2648616832-->
 	
@@ -74,8 +74,8 @@
 										</center>
 										<!--微信公众号结束·Pwndrer4二开·QQ：2648616832-->
 										<!--网站首页弹窗开始-->
-										<link href="https://app.ambier.cn/themes/simpleboot3/public/assets/css/sweetalert.min.css" rel="stylesheet">
-										<script src="https://app.ambier.cn/themes/simpleboot3/public/assets/js/sweetalert.min.js"></script>
+										<link href="sweetalert.min.css" rel="stylesheet">
+										<script src="sweetalert.min.js"></script>
 																					<script type="text/javascript">
 												swal("证书状态：正常", "本网站完全因兴趣而做，长期更新，如果可以请捐助一点，谢谢支持\n已使用新模版·如有找不到的应用请在搜索页搜索", "success")
 											</script>
