--- a/index.html
+++ b/index.html
@@ -23,11 +23,10 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<!--调用开始·Pwndrer4二开·QQ：2648616832-->
 	<title>Alan源</title>
-	<link rel="stylesheet" href="framework7.min.css">
-	<link rel="stylesheet" href="framework7.ios.colors.min.css">
-	<link rel="stylesheet" href="appvalley.css">
-	<link rel="stylesheet" href="http://at.alicdn.com/t/font_720367_duszgq18uni.css">
-	<script type="text/javascript" src="framework7.min.js"></script>
+	<link rel="stylesheet" href="https://www.xiaotutu.xyz/style/css/framework7.ios.min.css">
+	<link rel="stylesheet" href="https://www.xiaotutu.xyz/style/css/framework7.ios.colors.min.css">
+	<link rel="stylesheet" href="https://www.xiaotutu.xyz/style/css/appvalley.css">
+	<script type="text/javascript" src="https://www.xiaotutu.xyz/style/css/framework7.min.js"></script>
 	<!--调用结束·Pwndrer4二开·QQ：2648616832-->
 	<!--首页顶部开始·Pwndrer4二开·QQ：2648616832-->
 	
