--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<link rel="stylesheet" href="https://www.xiaotutu.xyz/style/css/framework7.ios.min.css">
 	<link rel="stylesheet" href="https://www.xiaotutu.xyz/style/css/framework7.ios.colors.min.css">
 	<link rel="stylesheet" href="https://www.xiaotutu.xyz/style/css/appvalley.css">
-	<script type="text/javascript" src="https://www.xiaotutu.xyz/style/css/framework7.min.js"></script>
+	<script type="text/javascript" src="https://www.xiaotutu.xyz/style/js/framework7.min.js"></script>
 	<!--调用结束·Pwndrer4二开·QQ：2648616832-->
 	<!--首页顶部开始·Pwndrer4二开·QQ：2648616832-->
 	
